--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
+                      <a href="#hackathons">Hackathons</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#work">Work</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
@@ -156,6 +162,186 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Hackathon Section -->
+    <section id="hackathons" class="success">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Hackathons</h2>
+            <hr class="star-light">
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h4>Organized / Collab</h4>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <ul>
+                      <li><h5>HackPR 2015</h5></li>
+                      <li><h5>PR Cuenta</h5></li>
+                      <li><h5>HackPR 2016</h5></li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col-sm-12">
+                  <h4>Attended</h4>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12">
+                  <ul>
+                    <li><h5>HackPR 2014</h5></li>
+                    <li><h5>TechSummit 2015</h5></li>
+                    <li><h5>BostonHacks 2015</h5></li>
+                    <li><h5>HackRPI 2015</h5></li>
+                    <li><h5>HackPRMA 2016</h5></li>
+                    <li><h5>Includeathon 2016</h5></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Timeline Section -->
+    <section id="work">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Work Experience</h2>
+            <hr class="star-primary">
+          </div>
+        </div>
+        <div class="row">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+
+                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small>
+                  </p>
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                  <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                  <hr>
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
+                      <i class="glyphicon glyphicon-cog"></i>  <span class="caret"></span>
+
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><a href="#">Action</a>
+                      </li>
+                      <li><a href="#">Another action</a>
+                      </li>
+                      <li><a href="#">Something else here</a>
+                      </li>
+                      <li class="divider"></li>
+                      <li><a href="#">Separated link</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <!-- About Section -->
