align columns in the middle for md+ screens

--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="row">
-                  <div class="col-sm-12">
+                  <div class="col-sm-12 col-md-8 col-md-offset-4 text-center">
                     <h4>Organized / Collab</h4>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-12">
+                  <div class="col-sm-12 col-md-8 col-md-offset-4">
                     <ul>
                       <li><h5>HackPR 2015</h5></li>
                       <li><h5>PR Cuenta</h5></li>
@@ -192,12 +192,12 @@
             </div>
             <div class="col-md-6">
               <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 col-md-8 text-center">
                   <h4>Attended</h4>
                 </div>
               </div>
               <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 col-md-8">
                   <ul>
                     <li><h5>HackPR 2014</h5></li>
                     <li><h5>TechSummit 2015</h5></li>
