--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-bomb fa-3x"></i>
+                                <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
@@ -350,20 +350,20 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Minesweeper Rewrite <a href="https://github.com/mantaleigh/BostonHacks_Minesweeper"><i class="fa fa-fw fa-github"></i></a></h2>
+                            <h2>Gemstore Web App <a href="https://github.com/diegofigs/gemstore"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/B3uimXBadDM" frameborder="0" allowfullscreen></iframe>
+                            <a href="http://dfv94.herokuapp.com/">Gemstore in Heroku</a><div class="box"><iframe src="http://dfv94.herokuapp.com/" width = "560" height = "315"></iframe></div>
                             <p>
                                 <strong>About</strong> The gemstore web application is a basic CRUD app inspired by CodeSchool and it’s AngularJS course. This is my final Data Structures project and is heavily modified from the original web application.
                                 <br>
                                 <strong>Implementation</strong> Backend service made in Java Play, frontend made using AngularJS and Twitter Bootstrap.
                             </p>
                             <ul class="list-inline item-details">
-                                <li>Event:
-                                    <strong>BostonHacks 2015</strong>
+                                <li>Course:
+                                    <strong>Data Structures S2015</strong>
                                 </li>
                                 <li>Date:
-                                    <strong>October 2015</strong>
+                                    <strong>Feb - May 2015</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
