--- a/index.html
+++ b/index.html
@@ -385,23 +385,24 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Gemstore  <a href="https://github.com/diegofigs/gemstore"><i class="fa fa-fw fa-github"></i></a></h2>
+                            <h2>Minesweeper Rewrite<a href="https://github.com/mantaleigh/BostonHacks_Minesweeper"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/Gemstore.png" class="img-responsive img-centered" alt="">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/B3uimXBadDM" frameborder="0" allowfullscreen></iframe>
                             <p>
-                                <strong>About</strong> The gemstore web application is a basic CRUD app inspired by CodeSchool and it’s AngularJS course. This is my final Data Structures project and is heavily modified from the original web application.
+                                <strong>The Challenge</strong> The four of us learned to use an entirely new API in the span of this 24 hour hackathon and completed our first hardware hack.
                                 <br>
-                                <strong>Implementation</strong> Backend made in Java Play Framework. Frontend made using AngularJS and Twitter Bootstrap.
-                                <ul class="list-inline item-details">
-                                    <li>Class:
-                                        <strong><a href="https://sites.google.com/a/upr.edu/icom-4035-spring-2015/home">Data Structures</a>
-                                    </strong>
-                                    </li>
-                                    <li>Date:
-                                        <strong>April 2015</strong>
-                                    </li>
-                                </ul>
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                                <strong>The Accomplishment</strong> While the game certainly isn't perfect, it's definitely functional, with 3 different types of hand motions required to interact and play the game. We even managed to put in a little joke whenever you uncover a mine!
+                            </p>
+                            <ul class="list-inline item-details">
+                                <li>Class:
+                                    <strong>BostonHacks F2015</strong>
+                                </li>
+                                <li>Date:
+                                    <strong>Oct 2015</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+
                         </div>
                     </div>
                 </div>
@@ -420,22 +421,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Lost en los Angeles<a href="https://github.com/diegofigs/LELA"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>
+                                <strong>Objective</strong> Design a Single Page Web app for launching Kari Faux's very own EP. Made in AngularJS.
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                    <strong>3am LLC</strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                    <strong>Jan 2016</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
