--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                         <div class="modal-body">
                             <h2>Lost en los Angeles<a href="https://github.com/diegofigs/LELA"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <img src="img/LELA.png" class="img-responsive img-centered" alt="">
                             <p>
                                 <strong>Objective</strong> Design a Single Page Web app for launching Kari Faux's very own EP. Made in AngularJS.
                             </p>
