make modal content mobile-friendly

--- a/index.html
+++ b/index.html
@@ -352,7 +352,13 @@
                         <div class="modal-body">
                             <h2>Gemstore Web App <a href="https://github.com/diegofigs/gemstore"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
-                            <a href="http://dfv94.herokuapp.com/">Gemstore in Heroku</a><div class="box"><iframe src="http://dfv94.herokuapp.com/" width = "560" height = "315"></iframe></div>
+                            <a href="http://dfv94.herokuapp.com/">Gemstore in Heroku</a>
+                            <div class="visible-xs-block col-xs-12">
+                                <iframe src="http://dfv94.herokuapp.com/"></iframe>
+                            </div>
+                            <div class="hidden-xs col-sm-12">
+                                <iframe src="http://dfv94.herokuapp.com/" width = "560" height = "315"></iframe>
+                            </div>
                             <p>
                                 <strong>About</strong> The gemstore web application is a basic CRUD app inspired by CodeSchool and it’s AngularJS course. This is my final Data Structures project and is heavily modified from the original web application.
                                 <br>
@@ -387,7 +393,12 @@
                         <div class="modal-body">
                             <h2>Minesweeper Rewrite<a href="https://github.com/mantaleigh/BostonHacks_Minesweeper"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/B3uimXBadDM" frameborder="0" allowfullscreen></iframe>
+                            <div class="visible-xs-block col-xs-12">
+                                <iframe src="https://www.youtube.com/embed/B3uimXBadDM" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                            <div class="hidden-xs col-sm-12">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/B3uimXBadDM" frameborder="0" allowfullscreen></iframe>
+                            </div>
                             <p>
                                 <strong>The Challenge</strong> The four of us learned to use an entirely new API in the span of this 24 hour hackathon and completed our first hardware hack.
                                 <br>
