--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="intro-text">
                         <span class="name">Hi! I'm Diego</span>
                         <hr class="star-light">
-                        <span class="skills">Full-Stack Developer - C.E. Undergrad - Student Hacker</span>
+                        <span class="skills">Full-Stack Developer - C.E. Senior Undergrad</span>
                     </div>
                 </div>
             </div>
