change link location of 1st project

--- a/index.html
+++ b/index.html
@@ -352,7 +352,6 @@
                         <div class="modal-body">
                             <h2>Gemstore Web App <a href="https://github.com/diegofigs/gemstore"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
-                            <a href="http://dfv94.herokuapp.com/">Gemstore in Heroku</a>
                             <div class="visible-xs-block col-xs-12">
                                 <iframe src="http://dfv94.herokuapp.com/"></iframe>
                             </div>
@@ -370,6 +369,9 @@
                                 </li>
                                 <li>Date:
                                     <strong>Feb - May 2015</strong>
+                                </li>
+                                <li>Link:
+                                    <strong><a href="http://dfv94.herokuapp.com/">Gemstore in Heroku</a></strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
