add modal4 and modal5 content

--- a/index.html
+++ b/index.html
@@ -467,22 +467,16 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Bitcomposer Interview <a href="https://github.com/diegofigs/bitcomposer-app"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Flickr clone implemented with MEAN (Mongo, Express, Angular, Node) stack as a technical interview for Bitcomposer, a consulting startup based of NY.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                    <strong>Bitcomposer</strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                    <strong>May 2016</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -504,25 +498,31 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>TutorMe.io<a href="https://github.com/diegofigs/tutorme.io"><i class="fa fa-fw fa-github"></i></a></h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <div class="visible-xs-block col-xs-12">
+                                <iframe src="http://tutorme-io.herokuapp.com/"></iframe>
+                            </div>
+                            <div class="hidden-xs col-sm-12">
+                                <iframe src="http://tutorme-io.herokuapp.com/" width = "560" height = "315"></iframe>
+                            </div>
+                            <p>
+                                <strong>About</strong> Our focus is to make tutoring as easy as possible, empowering daily tutors by giving them their own space to host courses. Enrolling as a student is only a few clicks away! This is my final project for the Database Systems course.
+                                <br>
+                                <strong>Implementation</strong> Backend service made in Java Play, frontend made using AngularJS and MaterializeCSS.
+                            </p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                <li>Course:
+                                    <strong>Database Systems F2016</strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                    <strong>Aug - Dec 2016</strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                <li>Link:
+                                    <strong><a href="http://tutorme-io.herokuapp.com/">TutorMe.io in Heroku</a></strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
                 </div>
