--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                        <img src="img/portfolio/Frog.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -114,7 +114,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                        <img src="img/portfolio/Skull.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -124,7 +124,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                        <img src="img/portfolio/Frog.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -134,7 +134,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                        <img src="img/portfolio/Squid.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -144,7 +144,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                        <img src="img/portfolio/Minion.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -154,7 +154,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
+                        <img src="img/portfolio/Butterfly.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
