--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                                 <strong>The Accomplishment</strong> While the game certainly isn't perfect, it's definitely functional, with 3 different types of hand motions required to interact and play the game. We even managed to put in a little joke whenever you uncover a mine!
                             </p>
                             <ul class="list-inline item-details">
-                                <li>Class:
+                                <li>Event:
                                     <strong>BostonHacks F2015</strong>
                                 </li>
                                 <li>Date:
@@ -541,21 +541,16 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Dom-Tracker</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Personal project that tracks dominoes games, implemented in Ionic 2 and Firebase for a serverless hybrid application. For beta access, please send me an email.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                <li>Type:
+                                    <strong>Utility</strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>December 2016
                                     </strong>
                                 </li>
                             </ul>
