--- a/index.html
+++ b/index.html
@@ -246,39 +246,38 @@
                         <div class="panel-body">
                             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                            <form name="sentMessage" id="contactForm" novalidate>
+                            <form role="form" action="http://formspree.io/diego@dfigueroa.me" method="post" novalidate>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 col-md-8 col-md-push-2 floating-label-form-group controls">
                                         <label>Name</label>
-                                        <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                        <input type="text" class="form-control" placeholder="Name" id="name" name="name" required data-validation-required-message="Please enter your name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 col-md-8 col-md-push-2 floating-label-form-group controls">
                                         <label>Email Address</label>
-                                        <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                        <input type="email" class="form-control" placeholder="Email Address" id="email" name="_replyto" required data-validation-required-message="Please enter your email address.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 col-md-8 col-md-push-2 floating-label-form-group controls">
                                         <label>Phone Number</label>
-                                        <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                        <input type="tel" class="form-control" placeholder="Phone Number" id="phone" name="phone" required data-validation-required-message="Please enter your phone number.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 col-md-8 col-md-push-2 floating-label-form-group controls">
                                         <label>Message</label>
-                                        <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                        <textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required data-validation-required-message="Please enter a message."></textarea>
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
-                                <div id="success"></div>
                                 <div class="row">
                                     <div class="form-group col-xs-12 col-md-6 col-md-push-3">
-                                        <button type="submit" class="btn btn-lg btn-block">Send</button>
+                                        <button type="submit" class="btn btn-light btn-lg btn-block">Send</button>
                                     </div>
                                 </div>
                             </form>
@@ -577,7 +576,6 @@
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
