--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section class="light" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -163,7 +163,7 @@
     </section>
 
     <!-- Hackathon Section -->
-    <section id="hackathons" class="success">
+    <section class="dark" id="hackathons">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -212,7 +212,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section class="dark" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -232,7 +232,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section class="light" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -277,7 +277,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-xs-12 col-md-6 col-md-push-3">
-                                        <button type="submit" class="btn btn-light btn-lg btn-block">Send</button>
+                                        <button type="submit" class="btn btn-primary btn-lg btn-block">Send</button>
                                     </div>
                                 </div>
                             </form>
